@@ -20,5 +20,6 @@
 #include <gras/transport.h>
 #include <gras/datadesc.h>
 #include <gras/messages.h>
+#include <gras/timer.h>
 
 #endif /* GRAS_H */
